--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_HOST=prod-server.com
+REACT_APP_HOST=http://35.76.233.160/smartstore
 REACT_APP_PASSWORD=abc123!!!!!
 REACT_APP_ABC=prod-test
