--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "highcharts": "^10.2.1",
     "highcharts-react-official": "^3.1.0",
     "jquery": "^3.6.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
