--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^29.1.2",
     "@types/node": "^18.8.3",
     "@types/react": "^18.0.21",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "@types/react-table": "^7.7.12",
@@ -31,6 +32,7 @@
     "jquery": "^3.6.1",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-cookie": "^4.1.1",
