--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.0.0",
     "bootstrap": "^5.2.2",
     "cross-env": "^7.0.3",
+    "framer-motion": "^10.16.5",
     "gh-pages": "^4.0.0",
     "highcharts": "^10.2.1",
     "highcharts-react-official": "^3.1.0",
