--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/react-table": "^7.7.12",
     "@types/uuid": "^9.0.1",
     "ag-grid-community": "^28.2.1",
-    "ag-grid-react": "^31.0.1",
+    "ag-grid-react": "^31.2.0",
     "axios": "^1.0.0",
     "bootstrap": "^5.2.2",
     "framer-motion": "^10.16.5",
@@ -42,6 +42,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-table": "^7.8.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
@@ -49,6 +50,7 @@
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.58.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.0.0",
     "styled-reset": "^4.4.7",
     "typesafe-actions": "^5.1.0",
